Refactor HTML, delete unused image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <h1 id="page-title">
-            <span class="h1 page-title-text">█ Akilram </span>
-            <span class="h1 page-title-text">░ Krishnan</span>
+            <span class="h1 page-title-text first-name">Akilram </span>
+            <span class="h1 page-title-text last-name">Krishnan</span>
         </h1>
         <hr class="title-text-separator">
         <span id="page-subtitle">Software Engineer</span>
