Implement featured work section + placeholders

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <header>
         <h1 id="page-title">
-            <span class="h1 page-title-text first-name">Akilram </span>
-            <span class="h1 page-title-text last-name">Krishnan</span>
+            <span class="h1 page-title-text first-name">Akilram</span>&nbsp;<span class="h1 page-title-text last-name">Krishnan</span>
         </h1>
         <hr class="title-text-separator">
-        <span id="page-subtitle">Software Engineer</span>
+        <p id="page-subtitle">Software Engineer</p>
         <ol id="links">
             <li class="links-item github"><a href="https://www.github.com/akilram">GitHub</a></li>
             <li class="links-item twitter"><a href="https://www.twitter.com/akilram">Twitter</a></li>
@@ -23,6 +22,32 @@
         </ol>
     </header>
     <main>
+        <section id="featured-work">
+            <h2>Featured Work</h2>
+            <div class="article-grid-container">
+                <article class="featured-work-item">
+                    <h3>Appify</h3>
+                    <figure>
+                        <img src="img/appify-banner.png" alt="appify">
+                        <figcaption><a href="https://github.com/udacity/Appify">https://github.com/udacity/Appify</a></figcaption>
+                    </figure>
+                </article>
+                <article class="featured-work-item">
+                    <h3>Sunflower</h3>
+                    <figure>
+                        <img src="img/sunflower-banner.png" alt="Sunflower">
+                        <figcaption><a href="https://github.com/udacity/Sunflower">https://github.com/udacity/Sunflower</a></figcaption>
+                    </figure>
+                </article>
+                <article class="featured-work-item">
+                    <h3>Bokeh</h3>
+                    <figure>
+                        <img src="img/bokeh-banner.png" alt="Bokeh">
+                        <figcaption><a href="https://github.com/udacity/Bokeh">https://github.com/udacity/Bokeh</a></figcaption>
+                    </figure>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 </html>
